Final security refactor: Minimal production-ready SecurityConfig and robust JwtRequestFilter